Restore Java 8 compatibility