@@ -4,6 +4,7 @@ import de.exlll.configlib.ConfigurationElements.FieldElement;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 final class ConfigurationSerializer<T> extends TypeSerializer<T, FieldElement> {
     ConfigurationSerializer(Class<T> configurationType, ConfigurationProperties properties) {
@@ -12,8 +13,8 @@ final class ConfigurationSerializer<T> extends TypeSerializer<T, FieldElement> {
 
     @Override
     public T deserialize(Map<?, ?> serializedConfiguration) {
-        final var deserializedElements = deserializeConfigurationElements(serializedConfiguration);
-        final var elements = elements();
+        final Object[] deserializedElements = deserializeConfigurationElements(serializedConfiguration);
+        final List<FieldElement> elements = elements();
         final T result = newDefaultInstance();
         for (int i = 0; i < deserializedElements.length; i++) {
             final FieldElement fieldElement = elements.get(i);
@@ -25,16 +26,19 @@ final class ConfigurationSerializer<T> extends TypeSerializer<T, FieldElement> {
     @Override
     protected void requireSerializableElements() {
         if (serializers.isEmpty()) {
-            String msg = "Configuration class '" + type.getSimpleName() + "' " +
-                         "does not contain any (de-)serializable fields.";
+            String msg = String.format(
+                    "Configuration class '%s' " +
+                    "does not contain an (de-)serializable fields.",
+                    type.getSimpleName()
+            );
             throw new ConfigurationException(msg);
         }
     }
 
     @Override
     protected String baseDeserializeExceptionMessage(FieldElement element, Object value) {
-        return "Deserialization of value '%s' with type '%s' for field '%s' failed."
-                .formatted(value, value.getClass(), element.element());
+        return String.format("Deserialization of value '%s' with type '%s' for field '%s' failed.",
+                value, value.getClass(), element.element());
     }
 
     @Override
@@ -42,7 +46,7 @@ final class ConfigurationSerializer<T> extends TypeSerializer<T, FieldElement> {
         return FieldExtractors.CONFIGURATION.extract(type)
                 .filter(properties.getFieldFilter())
                 .map(FieldElement::new)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
