@@ -1,12 +1,10 @@
 package de.exlll.configlib;
 
 import de.exlll.configlib.ConfigurationElements.FieldElement;
-import de.exlll.configlib.ConfigurationElements.RecordComponentElement;
 
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
-import java.lang.reflect.RecordComponent;
 import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -75,19 +73,16 @@ abstract class TypeSerializer<T, E extends ConfigurationElement<?>> implements S
         // This cast can lead to a ClassCastException if an element of type X is
         // serialized by a custom serializer that expects a different type Y.
         @SuppressWarnings("unchecked")
-        final var serializer = (Serializer<Object, Object>) serializers.get(element.name());
+        final Serializer<Object, Object> serializer = (Serializer<Object, Object>) serializers.get(element.name());
         try {
             return (value != null) ? serializer.serialize(value) : null;
         } catch (ClassCastException e) {
-            String msg = ("Serialization of value '%s' for element '%s' of type '%s' failed.\n" +
-                          "The type of the object to be serialized does not match the type " +
-                          "the custom serializer of type '%s' expects.")
-                    .formatted(
-                            value,
-                            element.element(),
-                            element.declaringType(),
-                            serializer.getClass()
-                    );
+            String msg = String.format(
+                    "Serialization of value '%s' for element '%s' of type '%s' failed.\n" +
+                    "The type of the object to be serialized does not match the type " +
+                    "the custom serializer of type '%s' expects.",
+                    value, element.element(), element.declaringType(), serializer.getClass()
+            );
             throw new ConfigurationException(msg, e);
         }
     }
@@ -117,12 +112,12 @@ abstract class TypeSerializer<T, E extends ConfigurationElement<?>> implements S
     protected final Object[] deserializeConfigurationElements(
             Map<?, ?> serializedConfiguration
     ) {
-        final var elements = elements();
-        final var result = new Object[elements.size()];
+        final List<E> elements = elements();
+        final Object[] result = new Object[elements.size()];
 
         for (int i = 0, size = elements.size(); i < size; i++) {
-            final var element = elements.get(i);
-            final var formattedName = formatter.format(element.name());
+            final E element = elements.get(i);
+            final String formattedName = formatter.format(element.name());
 
             if (!serializedConfiguration.containsKey(formattedName)) {
                 final Object defaultValue = getDefaultValueOf(element);
@@ -130,7 +125,7 @@ abstract class TypeSerializer<T, E extends ConfigurationElement<?>> implements S
                 continue;
             }
 
-            final var serializedValue = serializedConfiguration.get(formattedName);
+            final Object serializedValue = serializedConfiguration.get(formattedName);
 
             if ((serializedValue == null) && properties.inputNulls()) {
                 // This statement (and hence the whole block) could be removed,
@@ -155,12 +150,12 @@ abstract class TypeSerializer<T, E extends ConfigurationElement<?>> implements S
         Object result = deserializeValue;
 
         boolean postProcessed = false;
-        for (final var entry : properties.getPostProcessorsByCondition().entrySet()) {
-            final var condition = entry.getKey();
+        for (final Map.Entry<Predicate<? super ConfigurationElement<?>>, UnaryOperator<?>> entry : properties.getPostProcessorsByCondition().entrySet()) {
+            final Predicate<? super ConfigurationElement<?>> condition = entry.getKey();
 
             if (!condition.test(element)) continue;
 
-            final var postProcessor = entry.getValue();
+            final UnaryOperator<?> postProcessor = entry.getValue();
             result = tryApplyPostProcessorForElement(element, postProcessor, result);
             postProcessed = true;
         }
@@ -182,13 +177,15 @@ abstract class TypeSerializer<T, E extends ConfigurationElement<?>> implements S
             // This cast can lead to a ClassCastException if an element of type X is
             // annotated with a post-processor that takes values of some other type Y.
             @SuppressWarnings("unchecked")
-            final var pp = (UnaryOperator<Object>) postProcessor;
+            final UnaryOperator<Object> pp = (UnaryOperator<Object>) postProcessor;
             return pp.apply(value);
         } catch (ClassCastException e) {
-            String msg = ("Deserialization of value '%s' for element '%s' of type '%s' failed.\n" +
-                          "The type of the object to be deserialized does not match the type " +
-                          "post-processor '%s' expects.")
-                    .formatted(value, element.element(), element.declaringType(), postProcessor);
+            String msg = String.format(
+                    "Deserialization of value '%s' for element '%s' of type '%s' failed.\n" +
+                    "The type of the object to be deserialized does not match the type " +
+                    "post-processor '%s' expects.",
+                    value, element.element(), element.declaringType(), postProcessor
+            );
             throw new ConfigurationException(msg, e);
         }
     }
@@ -198,21 +195,14 @@ abstract class TypeSerializer<T, E extends ConfigurationElement<?>> implements S
     ) {
         if (!element.type().isPrimitive()) return;
 
-        if (element instanceof RecordComponentElement recordComponentElement) {
-            final RecordComponent component = recordComponentElement.element();
-            String msg = """
-                         Post-processors must not return null for primitive record \
-                         components but some post-processor of component '%s' of \
-                         record type '%s' does.\
-                         """.formatted(component, component.getDeclaringRecord());
-            throw new ConfigurationException(msg);
-        }
-
-        if (element instanceof FieldElement fieldElement) {
+        if (element instanceof FieldElement) {
+            final FieldElement fieldElement = (FieldElement) element;
             final Field field = fieldElement.element();
-            String msg = ("Post-processors must not return null for primitive fields " +
-                          "but some post-processor of field '%s' does.")
-                    .formatted(field);
+            String msg = String.format(
+                    "Post-processors must not return null for primitive fields " +
+                    "but some post-processor of field '%s' does.",
+                    field
+            );
             throw new ConfigurationException(msg);
         }
 
@@ -222,19 +212,14 @@ abstract class TypeSerializer<T, E extends ConfigurationElement<?>> implements S
     private static void requireNonPrimitiveType(ConfigurationElement<?> element) {
         if (!element.type().isPrimitive()) return;
 
-        if (element instanceof RecordComponentElement recordComponentElement) {
-            final RecordComponent component = recordComponentElement.element();
-            String msg = ("Cannot set component '%s' of record type '%s' to null. " +
-                          "Primitive types cannot be assigned null values.")
-                    .formatted(component, component.getDeclaringRecord());
-            throw new ConfigurationException(msg);
-        }
-
-        if (element instanceof FieldElement fieldElement) {
+        if (element instanceof FieldElement) {
+            final FieldElement fieldElement = (FieldElement) element;
             final Field field = fieldElement.element();
-            String msg = ("Cannot set field '%s' to null value. " +
-                          "Primitive types cannot be assigned null.")
-                    .formatted(field);
+            String msg = String.format(
+                    "Cannot set field '%s' to null value. " +
+                    "Primitive types cannot be assigned null.",
+                    field
+            );
             throw new ConfigurationException(msg);
         }
 
@@ -244,44 +229,52 @@ abstract class TypeSerializer<T, E extends ConfigurationElement<?>> implements S
     final UnaryOperator<T> createPostProcessorFromAnnotatedMethod() {
         final List<Method> list = Arrays.stream(type.getDeclaredMethods())
                 .filter(method -> method.isAnnotationPresent(PostProcess.class))
-                .filter(Predicate.not(Method::isSynthetic))
-                .filter(Predicate.not(this::isAccessorMethod))
-                .toList();
+                .filter(x -> !x.isSynthetic())
+                .filter(x -> !this.isAccessorMethod(x))
+                .collect(Collectors.toList());
 
         if (list.isEmpty())
             return UnaryOperator.identity();
         if (list.size() > 1) {
-            String methodNames = String.join("\n  ", list.stream().map(Method::toString).toList());
-            String msg = "Configuration types must not define more than one method for " +
-                         "post-processing but type '%s' defines %d:\n  %s"
-                                 .formatted(type, list.size(), methodNames);
+            String methodNames = list.stream().map(Method::toString).collect(Collectors.joining("\n  "));
+            String msg = String.format(
+                    "Configuration types must not define more than one method for " +
+                    "post-processing but type '%s' defines %d:\n  %s",
+                    type, list.size(), methodNames
+            );
             throw new ConfigurationException(msg);
         }
 
         final Method method = list.get(0);
         final int modifiers = method.getModifiers();
         if (Modifier.isAbstract(modifiers) || Modifier.isStatic(modifiers)) {
-            String msg = "Post-processing methods must be neither abstract nor static, " +
-                         "but post-processing method '%s' of type '%s' is."
-                                 .formatted(method, type);
+            String msg = String.format(
+                    "Post-processing methods must be neither abstract nor static, " +
+                    "but post-processing method '%s' of type '%s' is.",
+                    method, type
+            );
             throw new ConfigurationException(msg);
         }
 
         final int parameterCount = method.getParameterCount();
         if (parameterCount > 0) {
-            String msg = "Post-processing methods must not define any parameters but " +
-                         "post-processing method '%s' of type '%s' defines %d."
-                                 .formatted(method, type, parameterCount);
+            String msg = String.format(
+                    "Post-processing methods must not define any parameters but " +
+                    "post-processing method '%s' of type '%s' defines %d.",
+                    method, type, parameterCount
+            );
             throw new ConfigurationException(msg);
         }
 
         final Class<?> returnType = method.getReturnType();
         if ((returnType != void.class) && (returnType != type)) {
-            String msg = "The return type of post-processing methods must either be 'void' or " +
-                         "the same type as the configuration type in which the post-processing " +
-                         "method is defined. The return type of the post-processing method of " +
-                         "type '%s' is neither 'void' nor '%s'."
-                                 .formatted(type, type.getSimpleName());
+            String msg = String.format(
+                    "The return type of post-processing methods must either be 'void' or " +
+                    "the same type as the configuration type in which the post-processing " +
+                    "method is defined. The return type of the post-processing method of " +
+                    "type '%s' is neither 'void' nor '%s'.",
+                    type, type.getSimpleName()
+            );
             throw new ConfigurationException(msg);
         }
 
@@ -298,13 +291,9 @@ abstract class TypeSerializer<T, E extends ConfigurationElement<?>> implements S
         };
     }
 
+    // NOTE: this was originally a check intended for records
     final boolean isAccessorMethod(Method method) {
-        if (!type.isRecord()) return false;
-        if (!method.getDeclaringClass().equals(type)) return false;
-        if (method.getParameterCount() > 0) return false;
-        return Arrays.stream(type.getRecordComponents())
-                .map(RecordComponent::getName)
-                .anyMatch(s -> s.equals(method.getName()));
+        return false;
     }
 
     protected abstract void requireSerializableElements();
